fun: use local image (Noa!)

--- a/static/index.html
+++ b/static/index.html
@@ -9,6 +9,6 @@
 			font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 		}
 	</style>
-	<iframe src="https://giphy.com/embed/FaKV1cVKlVRxC" width="480" height="269" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/whale-FaKV1cVKlVRxC">via GIPHY</a></p>
+	<img width="450" height="600" src="./assets/whale-of-a-time.jpg">
 </body>
 </html>
